# hello-opengl

./: CMakeLists.txt  dlopen_opengl.c  gears.c  gears_sdl.c  gl2_qt.cxx  square_glfw.c
